# microchip-eeprom-25x

./: Cargo.toml  README.md
src/: eeprom25x.rs  lib.rs  register.rs  status.rs  storage.rs
