[package]
name = "microchip-eeprom-25x"
authors = ["Michael van Niekerk <mvniekerk@chazaqdev.com>"]
edition = "2018"
keywords = ["embedded-hal-driver", "eeprom", "MEMS", "microchip"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/mvniekerk/microchip-eeprom-25x"
categories  = ["embedded", "hardware-support", "no-std"]
version = "0.1.0"
readme = "README.md"

[dependencies]
embedded-hal = "~0.2"
bit_field = "~0.10"