[package]
name = "microchip-eeprom-25lcxx"
description = "A platform agnostic driver to interface with the Microchip 25LCxx EEPROM through SPI"
authors = ["Michael van Niekerk <mvniekerk@chazaqdev.com>"]
edition = "2018"
keywords = ["embedded-hal-driver", "eeprom", "MEMS", "microchip"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/mvniekerk/microchip-eeprom-25x"
categories  = ["embedded", "hardware-support", "no-std"]
version = "0.1.0"
readme = "README.md"

[dependencies]
embedded-hal = "~0.2"
bit_field = "~0.10"
embedded-storage = "~0.3"

[features]
default = ["25lc1024"]
25lc080c = ["density_8k","page_size_16"]
25lc080d = ["density_8k","page_size_32"]
25lc160c = ["density_16k","page_size_16"]
25lc160d = ["density_16k","page_size_32"]
25lc320a = ["density_32k","page_size_32"]
25lc128 = ["density_128k","page_size_64"]
25lc256 = ["density_256k","page_size_64"]
25lc512 = ["density_512k","page_size_128"]
25lc1024 = ["density_1024k","page_size_256"]
density_8k=[]
density_16k=[]
density_32k=[]
density_64k=[]
density_128k=[]
density_256k=[]
density_512k=[]
density_1024k=[]
page_size_16=[]
page_size_32=[]
page_size_64=[]
page_size_128=[]
page_size_256=[]